expose port in Dockerfile and include timestamp in html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,8 @@
 				<!-- The "Hello World!" message comes from /SimpleServlet -->
 				<h1 id = "message"></h1>
 				
-				<p class='description'></p> Thanks for creating a <span class="blue">Liberty for Java Starter Application</span>.
+				<p class='description'></p><span class="blue">IBM WebSphere Liberty Application</span>
+				<p id="datetime"></p>
 			</td>
 		</tr>
 	</table>
