update to test webhook

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 				<!-- The "Hello World!" message comes from /SimpleServlet -->
 				<h1 id = "message"></h1>
 				
-				<p class='description'></p>This is running on <span class="blue">IBM WebSphere Liberty Application</span>
+				<p class='description'></p>I love <span class="blue">IBM WebSphere Liberty Application</span>
 				<p id="datetime"></p>
 			</td>
 		</tr>
