change to test CICD

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 			<td>
 				<!-- The "Hello World!" message comes from /SimpleServlet -->
 				<h1 id = "message"></h1>
-				<p class='description'></p>Welcome to <span class="blue">IBM WebSphere Liberty Application</span>
+				<p class='description'></p>Test to <span class="blue">IBM WebSphere Liberty Application</span>
 				<p id="datetime"></p>
 			</td>
 		</tr>
